# mesh

./: .gitignore  pyproject.toml
backend/: main.py  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 1fb796aee7f3_initial_schema_with_task_deadlines.py  5f16e9c7c1c1_add_boards_table.py  79ba35b0e689_initial_schema.py  90ccc30f99db_initial_schema.py  d43d14520b24_initial_schema.py  eb35d796ec1a_initial_schema.py
backend/api/: auth.py  main.py  rbac.py  schemas.py  security.py
backend/api/database/: database.py  db_schema.py  schema.py  session.py
backend/api/routes/: auth.py  auth_router.py  board.py  task.py  team.py  user.py
backend/api/schemas/: authschema.py  userschema.py
backend/app/: main.py
backend/tests/: conftest.py  test_auth.py  test_rbac.py
frontend/: package-lock.json  tsconfig.app.json
frontend/src/: App.tsx  index.css
frontend/src/lib/: api.ts
frontend/src/pages/: BoardPage.tsx  Dashboard.tsx  Login.tsx  Profile.tsx  Register.tsx  Teams.tsx
